feat: add switch and destroy methods

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         <script src="./src/tiktap.js"></script>
         <script>
             const tabs = new Tiktap("#tabs");
-            // tabs.toggle("#tab3")
+            tabs.switch("#tab3");
             // tabs.destroy()
+            const tab2 = document.querySelector('a[href="#tab2"]');
         </script>
     </body>
 </html>
