--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
     </style>
     <body>
-        <ul id="tabs">
+        <ul id="tabs1">
             <!-- Tabs -->
             <li class="">
                 <a href="#tab1">Tab 1</a>
@@ -28,16 +28,36 @@
                 <a href="#tab3">Tab 3</a>
             </li>
         </ul>
-
         <!-- Panels -->
         <div id="tab1">Tab 1 content</div>
         <div id="tab2">Tab 2 content</div>
         <div id="tab3">Tab 3 content</div>
+
+        <ul id="tabs2">
+            <!-- Tabs -->
+            <li class="">
+                <a href="#tabA">Tab A</a>
+            </li>
+            <li>
+                <a href="#tabB">Tab B</a>
+            </li>
+            <li>
+                <a href="#tabC">Tab C</a>
+            </li>
+        </ul>
+        <!-- Panels -->
+        <div id="tabA">Tab A content</div>
+        <div id="tabB">Tab B content</div>
+        <div id="tabC">Tab C content</div>
         <script src="./src/tiktap.js"></script>
         <script>
-            const tabs = new Tiktap("#tabs", {
+            const tabs1 = new Tiktap("#tabs1", {
                 remember: true,
             });
+
+            // const tabs2 = new Tiktap("#tabs2", {
+            //    remember: true,
+            // });
             //tabs.switch("#tab3");
             // tabs.destroy()
             const tab2 = document.querySelector('a[href="#tab2"]');
