feat: handle persistence of multiple tabs

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                 remember: true,
             });
 
-            // const tabs2 = new Tiktap("#tabs2", {
-            //    remember: true,
-            // });
+            const tabs2 = new Tiktap("#tabs2", {
+                remember: true,
+            });
             //tabs.switch("#tab3");
             // tabs.destroy()
             const tab2 = document.querySelector('a[href="#tab2"]');
