--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         <script>
             const tabs1 = new Tiktap("#tabs1", {
                 remember: true,
+                onChange: (data) => {
+                    //data.tab, data.panel
+                    console.log(data);
+                },
             });
 
             const tabs2 = new Tiktap("#tabs2", {
